# lecture-study

./: .gitignore  README.md
01/: Chapter08.md
02/: README.md
03/: chapter01.md  chapter02.md  chapter03.md  chapter05.md  chapter06.md
04/: Chapter04.md  Chapter05.md
05/: README.md
06/: README.md
07/: README.md
1/: Chapter05.md  Chapter06.md  Chapter07.md  Chapter09.md  README.md
10/: README.md
11/: README.md
12/: README.md
13/: README.md
14/: README.md
15/: README.md
16/: README.md
17/: README.md
18/: README.md
19/: README.md
2/: README.md
20/: README.md
21/: README.md
22/: README.md
23/: README.md
24/: README.md
25/: README.md
26/: README.md
27/: README.md
28/: README.md
29/: README.md
3/: README.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md
30/: .gitignore  README.md
31/: .gitignore  README.md
32/: .gitignore  README.md
33/: README.md
34/: README.md
35/: README.md
36/: README.md
37/: README.md
38/: README.md
39/: README.md  ep01.md  ep02.md  ep03.md  ep04.md  ep05.md  ep06.md  ep07.md  ep08.md  ep09.md  ep10.md  ep11.md  ep12.md  ep13.md  ep14.md  ep15.md  ep16.md  ep17.md  ep18.md  ep19.md  ep20.md  ep21.md  ep22.md  ep23.md  ep24.md
4/: Chapter02.md  README.md
40/: README.md
41/: README.md
42/: README.md
43/: README.md
44/: README.md
45/: README.md
46/: README.md
47/: README.md  study-1.md
48/: README.md
49/: README.md
5/: README.md
50/: README.md  study-1.md
51/: README.md
51/inflean-streamlit/: chat.py  config.py  llm.py  pyproject.toml
51/inflearn-llm-application/: .gitignore  3.1 환경 설정과 LangChain의 ChatOpenAI를 활용한 검증.ipynb  3.1.2 환경 설정과 LangChain의 ChatUpstage를 활용한 검증.ipynb  3.1.3 환경 설정과 LangChain의 ChatOllama를 활용한 검증.ipynb  3.2 LangChain과 Chroma를 활용한 RAG 구성.ipynb  3.3 LangChain 없이 구성하는 RAG의 불편함.ipynb  3.4 LangChain을 활용한 Vector Database 변경 (Chroma ➡️ Pinecone).ipynb  3.5 Retrieval 효율 개선을 위한 데이터 전처리.ipynb  3.6 Retrieval 효율 개선을 위한 키워드 사전 활용방법.ipynb  5.1 LangSmith를 활용한 LLM Evaluation.ipynb  5.5 PromptTemplate 활용방법.ipynb  pyproject.toml  tax.docx  tax_with_markdown.docx  tax_with_table.docx  ~$tax.docx
52/: README.md
52/inflearn-langgraph-agent/: .gitignore  2.1 LangChain vs LangGraph (feat. LangGraph 개념 설명).ipynb  2.2 간단한 Retrieval 에이전트 (feat. PDF 전처리 꿀팁).ipynb  2.3 공식문서 따라하면 실패하는 Agentic RAG.ipynb  2.4 생성된 답변을 여러번 검증하는 Self-RAG.ipynb  2.5 웹 검색을 지원하는 Corrective RAG.ipynb  3.2 LangChain에서 도구(tool) 활용 방법.ipynb  3.3 LangGraph에서 도구(tool) 활용 방법.ipynb  main.py  pyproject.toml
52/inflearn-langgraph-agent/documents/: income_tax.md  income_tax.txt
53/: README.md  study-1.md
54/: README.md
55/: README.md
56/: README.md
57/: README.md
58/: README.md
59/: README.md
6/: README.md
60/: README.md
(+2945 files in other folders)
