[project]
name = "inflean-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-pinecone>=0.2.12",
    "langchain-upstage>=0.7.3",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
