[project]
name = "inflearn-llm-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "docx2txt>=0.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchain-pinecone>=0.2.12",
    "langchain-text-splitters>=0.3.11",
    "langchain-upstage>=0.7.3",
    "langchainhub>=0.1.21",
    "notebook>=7.4.5",
    "openai>=1.109.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
]
