[project]
name = "inflearn-langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.33",
    "langchain-upstage>=0.7.3",
    "langgraph>=0.6.8",
    "notebook>=7.4.7",
    "python-dotenv>=1.1.1",
]
